Fix alignment property in #area-esquerda

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ main {
 }
 
 #area-esquerda{
-    align-height: center;
+    align-items: center;
     background-color: palevioletred;
     flex: 1;
     border-radius: 20px 0px 0px 20px;
